# shadow-distributed

./: CLAUDE.md  CMakeLists.txt  README.md  explainer-distributed-shadow.html  plan.md  where-we-are.md
docs/: distributed_shadow.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  Cargo.toml  build.rs  shadow.rs
src/main/core/: configuration.rs  controller.rs  distributed.rs  manager.rs  mod.rs  runahead.rs  sim_config.rs  sim_stats.rs  worker.rs
src/main/core/distributed/: exchange.rs  mod.rs  mpi_backend.rs  synchronizer.rs
src/main/core/work/: event.rs
src/main/network/: packet.rs
src/main/network/graph/: mod.rs
src/test/: CMakeLists.txt
src/test/distributed/: CMakeLists.txt  distributed-child-failure.yaml  udp-distributed-mpi.yaml
src/test/tcp/: CMakeLists.txt  tcp_distributed_determinism_compare.cmake
src/test/udp/: CMakeLists.txt  udp-distributed-large-partition.partitions.yaml  udp-distributed-large-partition.yaml  udp-distributed-partition.partitions.yaml  udp-distributed-partition.yaml  udp_distributed_determinism_compare.cmake  udp_distributed_large_partition_stats_check.cmake
